--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 </head>
 <body>
 Natthamon Piamchaweewong
-<img src*"https://www.blognone.com/sites/default/files/externals/b4103cfbf3c7effcec809d5ed2faf8aa.png"></img>
+<img src="https://www.blognone.com/sites/default/files/externals/b4103cfbf3c7effcec809d5ed2faf8aa.png"></img>
 </body>
 </html>
