--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 </head>
 <body>
 Natthamon Piamchaweewong
-<img src="cat.jpg"></img>
+<img src="file:///C:/Users/Admin/Desktop/html/cat.jpg"></img>
 </body>
 </html>
