--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <head>
 </head>
 <body>
-Natthamon Piamchaweewong Aomsin
-<img src="https://avatars3.githubusercontent.com/u/60309850"></img>
+Natthamon Piamchaweewong
+<br>
+<img style="width:200px" src="https://avatars3.githubusercontent.com/u/60309850"></img>
 </body>
 </html>
