--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
 <head>
 </head>
-<body>
-Natthamon Piamchaweewong
+<body style = "backgrond-color:powderblue;">
+<font size = "32" color = "#FB55DF" face = "Comic Sans MS"> Natthamon Piamchaweewong </font>
 <br>
 <img style="width:200px" src="https://avatars3.githubusercontent.com/u/60309850"></img>
 </body>
