--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
 <head>
 </head>
-<body style = "backgrond-color:powderblue;">
-<font size = "32" color = "#FB55DF" face = "Comic Sans MS"> Natthamon Piamchaweewong </font>
+<body bgcolor="A8CFFB">
+<p style="text-align:center;"><font size = "32" color = "#FB55DF" face = "Comic Sans MS"> Natthamon Piamchaweewong </font>
 <br>
-<img style="width:200px" src="https://avatars3.githubusercontent.com/u/60309850"></img>
+<img style="width:200px" src="https://avatars3.githubusercontent.com/u/60309850"></p>
 </body>
 </html>
