--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
-<html>
-<head>
+<html><head>
+    <style> 
+body {
+  background-image: url("http://1.bp.blogspot.com/-Erl5usOo-gM/VOx9LyFYb_I/AAAAAAAAj24/PqGOLMIVv2E/s1600/bg.dookdik.001.gif");
+  background-color: #FCD8F0;
+}
+</style>
 </head>
-<body bgcolor="A8CFFB">
-<p style="text-align:center;"><font size = "32" color = "#FB55DF" face = "Comic Sans MS"> Natthamon Piamchaweewong </font>
+<body>
+    <div>
+<p style="text-align:center;"><font size="32" color="#FB55DF" face="Comic Sans MS"> Natthamon Piamchaweewong </font>
 <br>
 <img style="width:200px" src="https://avatars3.githubusercontent.com/u/60309850">
 </p>
-</body>
-</html>
+
+
+</div></body></html>
